<resources>
    <string name="app_name">Ldentist</string>



    <string name="upload_image_message">Please wait while we upload your Image. \n</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_a_photo_source">Choose a Photo Source</string>
    <string name="sign_out">Sign Out</string>
    <string name="ok">Ok</string>
    <string name="successful_registration">Successful Registration</string>
    <string name="registration_confirm_message">Please navigate to login page and enter your registered email and password.</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="profile">Profile</string>
    <string name="account_name">Account Name</string>
    <string name="re_password">Re-password</string>
    <string name="name">Name</string>
    <string name="position">Position</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_message">Enter the email associated with your account and we’ll send an email with instructions to reset your password</string>
    <string name="send_email">Send Email</string>
    <string name="uploaded_images">Uploaded Images</string>
    <string name="diagnostic_report">Diagnostic Report</string>
    <string name="save">Save</string>


</resources>