<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:paddingBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    style="@style/TextAppearance.Material3.HeadlineSmall"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/cyan"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/app_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <TextView
                        style="@style/TextAppearance.Material3.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="5dp"
                        android:text="@string/account_name"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/et_account_name"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/rounded_black_stroke_10"
                        android:paddingHorizontal="10dp" />

                    <TextView
                        style="@style/TextAppearance.Material3.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingVertical="5dp"
                        android:text="@string/password"
                        android:textColor="@color/black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password_input_layout"
                        android:background="@drawable/rounded_black_stroke_10"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:endIconMode="password_toggle"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeColor="@android:color/transparent"
                        app:boxStrokeWidthFocused="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="45dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:paddingVertical="0dp"
                            android:background="@android:color/transparent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        style="@style/TextAppearance.Material3.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingVertical="5dp"
                        android:text="@string/re_password"
                        android:textColor="@color/black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/re_password_input_layout"
                        android:background="@drawable/rounded_black_stroke_10"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:endIconMode="password_toggle"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeColor="@android:color/transparent"
                        app:boxStrokeWidthFocused="0dp"
                        android:layout_width="match_parent"
                        android:layout_height="45dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_re_password"
                            android:layout_width="match_parent"
                            android:paddingVertical="0dp"
                            android:background="@android:color/transparent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        style="@style/TextAppearance.Material3.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingVertical="5dp"
                        android:text="@string/email"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/rounded_black_stroke_10"
                        android:paddingHorizontal="10dp" />

                    <TextView
                        style="@style/TextAppearance.Material3.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingVertical="5dp"
                        android:text="@string/name"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@drawable/rounded_black_stroke_10"
                        android:paddingHorizontal="10dp" />

                    <TextView
                        style="@style/TextAppearance.Material3.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingVertical="5dp"
                        android:text="@string/position"
                        android:textColor="@color/black" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:background="@drawable/rounded_black_stroke_10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Spinner
                            android:id="@+id/sp_user_position"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_width="match_parent"
                            android:layout_height="45dp" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_sign_up"
                    android:background="@drawable/rounded_cyan_10"
                    android:layout_marginTop="30dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/sign_up"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_sign_up">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account" />

                    <TextView
                        android:id="@+id/tv_go_to_login"
                        android:textColor="@color/cyan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/log_in" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</layout>